Fix modern homepage body spacing

--- a/_sass/layout/_home.scss
+++ b/_sass/layout/_home.scss
@@ -12,6 +12,7 @@
   --modern-section-spacing: 5rem;
 
   margin: 0;
+  padding: 0;
   color: var(--modern-text);
   background: #fff;
   font-family: "Inter", $sans-serif;
